--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
-   "proxy":"http://localhost:4000/api" ,
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
